put tel in a second navbar to fix the problem with overflow at small widths

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -143,7 +143,8 @@ h1, h2, h3, h4, h5, h6
     font-family: 'Dosis', sans-serif;
     line-height: 50px;
 }
-*/.nav.navbar-nav 
+*/
+.nav.navbar-nav 
 {
     padding: 0 20px; 
     font-size: 1.2em;
@@ -185,6 +186,17 @@ h1, h2, h3, h4, h5, h6
 }
 
 .nav-tel li a:hover {
+    background-color: transparent;
+}
+
+.nav-tel-dark li a {
+    font-size: 22px;
+/*    color: #181818;
+*/    background-color: transparent;
+}
+
+.nav-tel-dark li a:hover {
+    color: #000000;
     background-color: transparent;
 }
 
